objects/Private_Lane_Access__c.object
<CustomObject>
    <description>This is a junction object between Organization Group (Dealership Groups) and Private lanes with the permissions a Dealership Group has</description>
    <fields>
        <fullName>Buying_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dealers in this Group can bid on Auctions</description>
        <label>Buying Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Checker__c</fullName>
        <description>By a Workflow rule, this populates with the concatenated string of PrivateLaneId and DealershipGroupId. Since a Dealership Group can only be assigned once to a Private Lane, this prevents Duplicates.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Duplicate Checker</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization_Group__c</fullName>
        <description>Link to the Dealership Group</description>
        <label>Organization Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Private Lane Accesses</relationshipLabel>
        <relationshipName>Private_Lane_Accesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Private_Lane__c</fullName>
        <description>Link to the Private Lane</description>
        <label>Private Lane</label>
        <referenceTo>Private_Lane__c</referenceTo>
        <relationshipLabel>Private Lane Accesses</relationshipLabel>
        <relationshipName>Private_Lane_Accesses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selling_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dealers in this Group can sell auctions in this Private Lane</description>
        <label>Selling Power</label>
        <type>Checkbox</type>
    </fields>
    <label>Private Lane Access</label>
    <nameField>
        <displayFormat>PLA-{0}</displayFormat>
        <label>Private Lane Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Lane Accesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>